--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,9 @@
 .App {
   display: flex;
+  flex-direction: column;
   width: 100%;
   height: 100vh;
   align-items: center;
-  justify-content: center;
 }
 
 .app-canvas {
