created redo btn

--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -3,12 +3,13 @@ header {
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  min-width: 550px;
+  min-width: 660px;
   padding: 20px 0px;
 }
 
 .header-undoBtn,
-.header-clearBtn {
+.header-clearBtn,
+.header-redoBtn {
   padding: 10px 20px;
   border: none;
   border-radius: 10px;
@@ -18,7 +19,8 @@ header {
   font-weight: bold;
 }
 .header-clearBtn:hover,
-.header-undoBtn:hover {
+.header-undoBtn:hover,
+.header-redoBtn:hover {
   background-color: #f5f5f5;
   transition: all 0.3s;
 }
